fix dropdown aligning in search filter for ios

--- a/app/assets/stylesheets/partials/_media.css.sass
+++ b/app/assets/stylesheets/partials/_media.css.sass
@@ -108,10 +108,12 @@
     margin: 5px 0
 
   .search-filter-form
+    label
+      padding-top: 0.5em
+
     select
-      margin-left: 30%
+      +float_right
       width: 70%
-      display: block
 
     input[type="submit"]
       width: 100%
